don't need Z-index, make sure row doesn't cover logo
[#42435089]

By making the display property for #header.row 'inline block'
the row stops at the end of it's content and doesn't
start to cover up the logo link.

Before this fix the logo link was clickable only at the very top
where it wasn't covered by the row of additional links.

--- a/src/examples/interactives/interactives.sass
+++ b/src/examples/interactives/interactives.sass
@@ -27,8 +27,8 @@ $header-font-color: #eee
       text-decoration: none
   .row
     position: relative
+    display: inline-block
     margin: 0.3em 0em 0.3em 0em
-    z-index: 100
   span.title
     margin-left: 1em
     font-weight: 600
